modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/vpx/bindings/CobaltVpx.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_plane$descriptor() {
        return cobalt_vpx_img_plane.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_vpx_img_plane$handle() {
        return cobalt_vpx_img_plane.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_vpx_img_plane$address() {
        return cobalt_vpx_img_plane.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const uint8_t *cobalt_vpx_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_vpx_img_plane(MemorySegment img, int plane) {
        var mh$ = cobalt_vpx_img_plane.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_img_plane", img, plane);
            }
            return (MemorySegment)mh$.invokeExact(img, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_img_stride {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_img_stride");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_stride(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_stride$descriptor() {
        return cobalt_vpx_img_stride.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_stride(void *img, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_vpx_img_stride$handle() {
        return cobalt_vpx_img_stride.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_stride(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_vpx_img_stride$address() {
        return cobalt_vpx_img_stride.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_stride(void *img, int32_t plane)
     * }
     */
    public static int cobalt_vpx_img_stride(MemorySegment img, int plane) {
        var mh$ = cobalt_vpx_img_stride.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_img_stride", img, plane);
            }
            return (int)mh$.invokeExact(img, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_img_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_img_width");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_width(void *img)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_width$descriptor() {
        return cobalt_vpx_img_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_width(void *img)
     * }
     */
    public static MethodHandle cobalt_vpx_img_width$handle() {
        return cobalt_vpx_img_width.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_width(void *img)
     * }
     */
    public static MemorySegment cobalt_vpx_img_width$address() {
        return cobalt_vpx_img_width.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_width(void *img)
     * }
     */
    public static int cobalt_vpx_img_width(MemorySegment img) {
        var mh$ = cobalt_vpx_img_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_img_width", img);
            }
            return (int)mh$.invokeExact(img);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_img_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_img_height");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_height(void *img)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_img_height$descriptor() {
        return cobalt_vpx_img_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_height(void *img)
     * }
     */
    public static MethodHandle cobalt_vpx_img_height$handle() {
        return cobalt_vpx_img_height.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_height(void *img)
     * }
     */
    public static MemorySegment cobalt_vpx_img_height$address() {
        return cobalt_vpx_img_height.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_img_height(void *img)
     * }
     */
    public static int cobalt_vpx_img_height(MemorySegment img) {
        var mh$ = cobalt_vpx_img_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_img_height", img);
            }
            return (int)mh$.invokeExact(img);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_decoder_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_decoder_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_destroy(void *ctx)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_decoder_destroy$descriptor() {
        return cobalt_vpx_decoder_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_destroy(void *ctx)
     * }
     */
    public static MethodHandle cobalt_vpx_decoder_destroy$handle() {
        return cobalt_vpx_decoder_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_destroy(void *ctx)
     * }
     */
    public static MemorySegment cobalt_vpx_decoder_destroy$address() {
        return cobalt_vpx_decoder_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_decoder_destroy(void *ctx)
     * }
     */
    public static int cobalt_vpx_decoder_destroy(MemorySegment ctx) {
        var mh$ = cobalt_vpx_decoder_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_decoder_destroy", ctx);
            }
            return (int)mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_strerror {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_strerror");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *cobalt_vpx_strerror(int32_t err)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_strerror$descriptor() {
        return cobalt_vpx_strerror.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *cobalt_vpx_strerror(int32_t err)
     * }
     */
    public static MethodHandle cobalt_vpx_strerror$handle() {
        return cobalt_vpx_strerror.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *cobalt_vpx_strerror(int32_t err)
     * }
     */
    public static MemorySegment cobalt_vpx_strerror$address() {
        return cobalt_vpx_strerror.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *cobalt_vpx_strerror(int32_t err)
     * }
     */
    public static MemorySegment cobalt_vpx_strerror(int err) {
        var mh$ = cobalt_vpx_strerror.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_strerror", err);
            }
            return (MemorySegment)mh$.invokeExact(err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int COBALT_VPX_BAD_PARAM = (int)-1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_BAD_PARAM -1
     * }
     */
    public static int COBALT_VPX_BAD_PARAM() {
        return COBALT_VPX_BAD_PARAM;
    }
    private static final int COBALT_VPX_NOMEM = (int)-2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_NOMEM -2
     * }
     */
    public static int COBALT_VPX_NOMEM() {
        return COBALT_VPX_NOMEM;
    }
    private static final int COBALT_VPX_IMG_WRAP_FAILED = (int)-3L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_IMG_WRAP_FAILED -3
     * }
     */
    public static int COBALT_VPX_IMG_WRAP_FAILED() {
        return COBALT_VPX_IMG_WRAP_FAILED;
    }
}

